--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -7,104 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebSite</title>
     <!-- Hoja de Estilos -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <header class="encabezado">
-        <a href="{% url 'home' %}"><img src="{% static 'img/index/logo.png' %}" alt="Logo" title="Logo"
-                class="logotipo"></a>
+        <a href="{% url 'home' %}"><img src="{% static 'img/logo.png' %}" alt="Logo" title="Logo"
+                class="logo"></a>
         <nav class="menu_selectivo">
             <a href="" class="menu">Agregar</a>
             <a href="" class="menu">Visualizar</a>
         </nav>
     </header>
-
-    <section class="intermedio">
-        {% block intermedio %}
-        <img src="{% static 'img/Intermedio/intermedio_gif.gif' %}" alt="Carrousel" class="principal_intermedio">
-        {% endblock %}
-    </section>
     <main class="contenedor_general">
         {% block cuerpo %}
         <div class="contenedor_index">
             <img src="{% static 'img/index/Hogwarts.png' %}" alt="">
-            <article class="artitulo">
-                <h2>Colegio Hogwarts de Magia y Hechicería</h2>
-                <p>Es un internado mágico ubicado en Escocia. El castillo se ubica en unas montañas cercanas a un
-                    lago. La localización exacta no ha sido descubierta ya que está escondida por los más poderosos
-                    encantamientos posibles. Sin embargo, de acuerdo con Hermione Granger, no está muy lejos de
-                    Dufftown. Los encantamientos que protegen al castillo son clasificados como encantamientos
-                    anti-aparición y encantos repelentes de Muggles (como el repello muggletum), que lo hacen que ellos
-                    vean unas ruinas antiguas con un letrero que dice "Peligro, prohibido el paso" en lugar del
-                    castillo. Estos encantamientos pueden ser levantados por el Director. La mayoría de los dispositivos
-                    electrónicos no funcionan en los terrenos de Hogwarts. En un momento dado, Hogwarts llegó a
-                    tener 1000 estudiantes.</p>
-                <h4>Perspectiva general</h4>
-                <p>Hogwarts es una de las tres escuelas más importantes de Europa, que entrena a personas con
-                    habilidades mágicas para que se conviertan en magos y brujas cualificados. Su estatus no es muy
-                    discutido en las novelas de Harry Potter, pero es conocida como un internado de secundaria que
-                    aborda a niños de 11 a 17 años.</p>
-            </article>        
+            <article class="articulo">
+                <h2>Bienvenidos a nuestra Farmacia Online</h2>
+                <p>En nuestra farmacia, trabajamos cada día para ofrecerte los mejores productos para el cuidado de tu
+                    salud. Nos enorgullece brindar un servicio de atención personalizado, que se adapta a las
+                    necesidades de cada cliente, siempre garantizando la máxima calidad en nuestros productos
+                    farmacéuticos y parafarmacéuticos.</p>
+                <h4>Nuestros servicios</h4>
+                <p>Ofrecemos una amplia gama de medicamentos, productos de higiene, suplementos, y más, con el objetivo
+                    de cuidar de ti y tu familia.</p>
+            </article>         
         </div>
-
-        <div class="tarjetas_index">
-            <div class="tarjeta_volteo" id="Gryffindor">
-                <div class="tarjeta_volteo-interno">
-                    <div class="tarjeta_volteo-front">
-                        <img src="{% static 'img/index/Gryffindor.jpg' %}" alt="">
-                    </div>
-                    <div class="tarjeta_volteo-back">
-                        Gryffindor es una de las cuatro casas del Colegio Hogwarts de Magia y Hechicería, fundada por
-                        Godric Gryffindor. Su animal emblemático es el león y sus colores son el rojo escarlata y el
-                        dorado. Minerva McGonagall es la más reciente jefa de la casa.
-                    </div>
-                </div>
-            </div>
-            <div class="tarjeta_volteo" id="Hufflepuff">
-                <div class="tarjeta_volteo-interno">
-                    <div class="tarjeta_volteo-front">
-                        <img src="{% static 'img/index/Hufflepuff.jpg' %}" alt="">
-                    </div>
-                    <div class="tarjeta_volteo-back">
-                        Hufflepuffes una de las cuatro casas del Colegio Hogwarts de Magia y
-                        Hechicería. Su fundadora es la bruja medieval Helga Hufflepuff. La jefa de la casa es Pomona
-                        Sprout.El fraile gordo es el fantasma de la casa
-                    </div>
-                </div>
-            </div>
-
-            <div class="tarjeta_volteo" id="Ravenclaw">
-                <div class="tarjeta_volteo-interno">
-                    <div class="tarjeta_volteo-front">
-                        <img src="{% static 'img/index/Ravenclaw.jpg' %}" alt="">
-                    </div>
-                    <div class="tarjeta_volteo-back">
-                        Ravenclawes una de las cuatro casas que componen el Colegio Hogwarts de Magia
-                        y Hechicería, fundada por Rowena Ravenclaw, quién tuvo una hija, cuyo fantasma es la Dama
-                        Gris la cual fue asesinada por el Barón Sanguinario.
-                    </div>
-                </div>
-            </div>
-
-            <div class="tarjeta_volteo" id="Slytherin">
-                <div class="tarjeta_volteo-interno">
-                    <div class="tarjeta_volteo-front">
-                        <img src="{% static 'img/index/Slytherin.jpg' %}" alt="">
-                    </div>
-                    <div class="tarjeta_volteo-back">
-                        Slytherin es una de las cuatro casas del Colegio Hogwarts de Magia
-                        y Hechicería, fundada por Salazar Slytherin. Al establecer la casa, Salazar instruyó al Sombrero
-                        Seleccionador para que seleccionara a los estudiantes que tenían las características
-                        particulares que él valoraba más
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <br>
         <div class="contenedor_visualizar">
             {% for i in forms %}
             <div class="card" style="width: 18rem;">
