--- a/App/static/css/styles.css
+++ b/App/static/css/styles.css
@@ -116,18 +116,39 @@ body {
     margin: 5px;
 }
 
-/* Footer */
-footer {
-    background-color: #007bff;
-    padding: 10px;
-    text-align: center;
+.footer {
+    background-color: #0080ff; /* Color de fondo oscuro */
+    padding: 20px 0;
+    color: #fff; /* Color del texto */
 }
 
-footer img {
-    width: 30px;
-    margin: 0 10px;
+.footer .social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 15px; 
 }
 
-footer img:hover {
-    opacity: 0.7;
+.footer .icon {
+    width: 60px;  /* Aumenta el tamaño de las imágenes */
+    height: 60px; /* Mantén la proporción */
+    transition: transform 0.3s ease;
 }
+
+.footer .icon:hover {
+    transform: scale(1.3); /* Incrementa el tamaño en hover */
+}
+
+
+.footer .footer-text {
+    font-size: 14px;
+    color: #ccc; /* Color gris claro para el texto */
+}
+
+.footer a {
+    text-decoration: none;
+}
+
+.footer a:hover {
+    opacity: 0.8;
+}
+
