--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebSite</title>
     <!-- Hoja de Estilos -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -18,7 +18,7 @@
                 class="logo"></a>
         <nav class="menu_selectivo">
             <a href="{% url 'agregar'%}" class="menu">Agregar</a>
-            <a href="" class="menu">Visualizar</a>
+            <a href="{% url 'vistas'%}" class="menu">Visualizar</a>
         </nav>
     </header>
     <main class="contenedor_general">
@@ -36,34 +36,25 @@
                     de cuidar de ti y tu familia.</p>
             </article>         
         </div>
-        <div class="contenedor_visualizar">
-            {% for i in forms %}
-            <div class="card" style="width: 18rem;">
-                <img src="{{i.Imagen.url}}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h4 class="card-title">{{i.Nombre}}</h5>
-                        <h5 class="card-title">{{i.Descripcio}}</h5>
-                        <p class="card-text">{{i.Precio}}</p>
-                        {% if perms.App.change_personajes %}
-                        <a href="{% url 'modificar' i.Codigo %}" class="btn btn-outline-light">Editar</a>
-                        {% endif %}
-                        {% if perms.App.delete_personajes %}
-                        <a href="{% url 'eliminar' i.Codigo %}" class="btn btn-outline-danger">Eliminar</a>
-                        {% endif %}
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-
         {% endblock %}
     </main>
-    <footer>
-        <img src="{% static 'img/index/ig.png' %}" alt="">
-        <img src="{% static 'img/index/facebook.png' %}" alt="">
-        <img src="{% static 'img/index/whatsapp.png' %}" alt="">
-        <img src="{% static 'img/index/gorjeo.png' %}" alt="">
+    <footer class="footer mt-auto py-3">
+        <div class="container text-center">
+            <div class="social-icons">
+                <a href="https://www.instagram.com" target="_blank">
+                    <img src="{% static 'img/ig.png' %}" alt="Instagram" class="icon">
+                </a>
+                <a href="https://www.facebook.com" target="_blank">
+                    <img src="{% static 'img/face.png' %}" alt="Facebook" class="icon">
+                </a>
+                <a href="https://www.whatsapp.com" target="_blank">
+                    <img src="{% static 'img/whats.png' %}" alt="WhatsApp" class="icon">
+                </a>
+            </div>
+            <p class="footer-text mt-3">© 2024 Farmacia Online. Todos los derechos reservados.</p>
+        </div>
     </footer>
-    <!-- Hoja de Acciones de Bootstrap -->
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
