--- a/App/templates/pages/agregar.html
+++ b/App/templates/pages/agregar.html
@@ -10,7 +10,7 @@
         {{forms}}
         {% csrf_token %}
         <!-- Botón para Consulta -->
-        <input type="submit" class="btn btn-outline-primary" value="Registrar">
+        <input type="submit" class="btn" value="Registrar">
         <p class="mensaje">{{manin}}</p>
     </form>
 </div>
