--- a/Proyecto/App/templates/pages/vistas.html
+++ b/Proyecto/App/templates/pages/vistas.html
@@ -9,6 +9,12 @@
             <h4 class="card-title">Nombre: {{i.Nombre}}</h5>
             <h5 class="card-title">Descripcion: {{i.Descripcion}}</h5>
             <p class="card-text">Precio: {{i.Precio}}</p>
+            {% if perms.App.change_Vehiculos %}
+            <a href="{% url 'modificar' i.Codigo %}" class="btn btn-primary">Editar</a>
+            {% endif %}
+            {% if perms.App.delete_Vehiculos %}
+            <a href="{% url 'eliminar' i.Codigo %}" class="btn btn-danger">Eliminar</a>
+            {% endif %}
         </div>
     </div>
     {% endfor %}
