--- a/Proyecto/App/templates/pages/modificar.html
+++ b/Proyecto/App/templates/pages/modificar.html
@@ -1,15 +1,8 @@
 {% extends 'index.html' %}
-
     {% load static %}
 
-    {% block intermedio %}
-    {% endblock %}
-
     {% block cuerpo %}
-    <div class="contendor_agregar">
-
-       
-
+    <div class="contenedor_agregar">
         <form action="" method="post" enctype="multipart/form-data">
             <h1>Modifique los Datos</h1>
                 {{forms}}
