--- a/Proyecto/App/templates/registration/login.html
+++ b/Proyecto/App/templates/registration/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
+    <link rel="stylesheet" href="../../static/css/style.css">
 </head>
 <body>
-    <div class="contendor_login">
-        <img src="" alt="">
-        <form action="" method="post">
+    <div class="contenedor_agregar">
+        <form action="" method="post" enctype="multipart/form-data">
             <h1>Login</h1>
             {% csrf_token %} 
             {{form}}
