--- a/Proyecto/App/templates/pages/agregar.html
+++ b/Proyecto/App/templates/pages/agregar.html
@@ -5,8 +5,8 @@
 <div class="contenedor_agregar">
     <img src="" alt="">
     <form action="" method="post" enctype="multipart/form-data">
-        <!-- PR desde Views -->
-        <h4>Cargue el Remedio</h4>
+       
+        <h4>Cargue el Producto</h4>
         {{forms}}
         {% csrf_token %}
         <!-- Botón para Consulta -->
