--- a/Proyecto/App/templates/pages/vistas.html
+++ b/Proyecto/App/templates/pages/vistas.html
@@ -9,6 +9,9 @@
             <h4 class="card-title">Nombre: {{i.Nombre}}</h5>
             <h5 class="card-title">Descripcion: {{i.Descripcion}}</h5>
             <p class="card-text">Precio: {{i.Precio}}</p>
+            {% if user.is_authenticated %}
+            <a href="" class="btn btn-primary" >Comprar</a>
+            {% endif %}
             {% if perms.App.change_Vehiculos %}
             <a href="{% url 'modificar' i.Codigo %}" class="btn btn-primary">Editar</a>
             {% endif %}
